--- a/11-09-2023 - Introdução/Desafio HTML/index.html
+++ b/11-09-2023 - Introdução/Desafio HTML/index.html
@@ -20,17 +20,14 @@
         Olá! Me chamo Gabriel Morez e sou estudante de HTML e CSS, gostaria de conhecer melhor o meu trabalho?
         Entre em contato, vamos conversar!
     </p>
+    <aside><img src="Imagem.png" alt="ImagemPessoa"></aside>
     <a href="https://github.com/GabrielMorez" >
         <button>Git Hub</button>
     </a>
 
-    <a href="https://www.instagram.com/GabrielMorez/" type="_blank">
+    <a href="https://www.instagram.com/GabrielMorez/">
         <button>Instagram</button>
-    </a>
-    
-    <aside><img src="Imagem.png" alt="ImagemPessoa"></aside>
-
-    
+    </a>  
 
 </body>
 
