Ajustado a estrutura do HTML.

--- a/11-09-2023 - Introdução/Desafio HTML/index.html
+++ b/11-09-2023 - Introdução/Desafio HTML/index.html
@@ -2,32 +2,33 @@
 <html lang="en">
 
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site de Apresentação</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+
 </head>
 
 
 
 <body>
-    
-    <header>
-        Eleve seu negocio digital a outro nível com um site de qualidade
-    </header>
-    <p>
-        Olá! Me chamo Gabriel Morez e sou estudante de HTML e CSS, gostaria de conhecer melhor o meu trabalho?
-        Entre em contato, vamos conversar!
-    </p>
-    <aside><img src="Imagem.png" alt="ImagemPessoa"></aside>
-    <a href="https://github.com/GabrielMorez" >
-        <button>Git Hub</button>
-    </a>
 
-    <a href="https://www.instagram.com/GabrielMorez/">
-        <button>Instagram</button>
-    </a>  
+    <main>
+        <h1>
+            Eleve seu negocio digital a outro nível <strong>com um site de qualidade</strong>
+        </h1>
+
+        <p>
+            Olá! Me chamo Gabriel Morez e sou estudante de HTML e CSS, gostaria de conhecer melhor o meu trabalho?
+            Entre em contato, vamos conversar!
+        </p>
+
+        <aside><img src="Imagem.png" alt="ImagemPessoa"></aside>
+
+        <a href="https://github.com/GabrielMorez" target="_blank">Git Hub</a>
+
+        <a href="https://www.instagram.com/GabrielMorez/" target="_blank">Instagram</a>
+    </main>
 
 </body>
 
