--- a/11-09-2023 - Introdução/Desafio HTML/index.html
+++ b/11-09-2023 - Introdução/Desafio HTML/index.html
@@ -5,6 +5,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Site de Apresentação</title>
 
 </head>
@@ -14,20 +15,24 @@
 <body>
 
     <main>
-        <h1>
-            Eleve seu negocio digital a outro nível <strong>com um site de qualidade</strong>
+        <h1 class="titulo">
+            Eleve seu negocio digital a outro nível <strong class="destaque">com um site de qualidade</strong>
         </h1>
 
-        <p>
+        <p class="conteudo">
             Olá! Me chamo Gabriel Morez e sou estudante de HTML e CSS, gostaria de conhecer melhor o meu trabalho?
             Entre em contato, vamos conversar!
         </p>
 
-        <aside><img src="Imagem.png" alt="ImagemPessoa"></aside>
+        <aside ><img src="Imagem.png" alt="ImagemPessoa" class="imagem"></aside>
 
-        <a href="https://github.com/GabrielMorez" target="_blank">Git Hub</a>
+        <div class="botoes">
 
-        <a href="https://www.instagram.com/GabrielMorez/" target="_blank">Instagram</a>
+            <button class="botaoGit"><a href="https://github.com/GabrielMorez" target="_blank">Git Hub</a></button>
+
+            <button class="botaoInstagram" form="https://www.instagram.com/GabrielMorez/"  formtarget="_blank">Instagram</button>
+
+        </div>
     </main>
 
 </body>
