--- a/11-09-2023 - Introdução/Desafio HTML/index.html
+++ b/11-09-2023 - Introdução/Desafio HTML/index.html
@@ -15,22 +15,25 @@
 <body>
 
     <main>
-        <h1 class="titulo">
-            Eleve seu negocio digital a outro nível <strong class="destaque">com um site de qualidade</strong>
-        </h1>
+        <div class="texto">
+            <h1 class="titulo">
+                Eleve seu negocio digital a outro nível <strong class="destaque">com um site de qualidade</strong>
+            </h1>
 
-        <p class="conteudo">
-            Olá! Me chamo Gabriel Morez e sou estudante de HTML e CSS, gostaria de conhecer melhor o meu trabalho?
-            Entre em contato, vamos conversar!
-        </p>
+            <p class="conteudo">
+                Olá! Me chamo Gabriel Morez e sou estudante de HTML e CSS, gostaria de conhecer melhor o meu trabalho?
+                Entre em contato, vamos conversar!
+            </p>
+        </div>
 
-        <aside ><img src="Imagem.png" alt="ImagemPessoa" class="imagem"></aside>
+        <div class="imagem">
+            <img src="Imagem.png" alt="ImagemPessoa";>
+        </div>
 
         <div class="botoes">
 
-            <button class="botaoGit"><a href="https://github.com/GabrielMorez" target="_blank">Git Hub</a></button>
-
-            <button class="botaoInstagram" form="https://www.instagram.com/GabrielMorez/"  formtarget="_blank">Instagram</button>
+            <a class="botaoGit" href="https://github.com/GabrielMorez" target="_blank">Git Hub</a>
+            <a class="botaoInstagram" href="https://www.instagram.com/gabrielmorez/" target="_blank">Instagram</a>
 
         </div>
     </main>
