--- a/12-09-2023 - Projeto HTML/index.html
+++ b/12-09-2023 - Projeto HTML/index.html
@@ -9,74 +9,77 @@
 </head>
 
 <body>
-    <header>
+    <header class="cabecalho">
         <nav>
             <a href="https://www.tudogostoso.com.br/" target="_blank">Outras Receitas</a>
         </nav>
     </header>
-    <main>
-        <h1>Bolo de cenoura com cobertura de chocolate</h1>
-        <img src="https://assets.unileversolutions.com/recipes-v2/35824.jpg?imwidth=900" alt="BolodeCenoura.jpg" width="640" height="456">
+    <main class="principal">
+        <h1 class="titulo">Bolo de cenoura com cobertura de chocolate</h1>
+        <img class="imagem" src="https://assets.unileversolutions.com/recipes-v2/35824.jpg?imwidth=900" alt="BolodeCenoura.jpg" width="750" height="570">
 
-        <h3>Massa</h3>
-        <ul>
-            <li>3 xícaras de farinha</li>
-            <li>2 ovos</li>
-            <li>1/2 xícara de óleo</li>
-            <li>2 colheres de fermento</li>
-            <li>2 cenouras</li>
-            <li>2 xícaras de açúcar</li>
-        </ul>
+        <div class="todosTextos">
+            <h3 class="subtitulo">Massa</h3>
+            <ul class="texto">
+                <li>3 xícaras de farinha</li>
+                <li>2 ovos</li>
+                <li>1/2 xícara de óleo</li>
+                <li>2 colheres de fermento</li>
+                <li>2 cenouras</li>
+                <li>2 xícaras de açúcar</li>
+            </ul>
 
-        <h3>Cobertura</h3>
-        <ul>
-            <li>1 lata de leite condensado Moça</li>
-            <li>1 colher de manteiga</li>
-            <li>3 colheres de Nescau</li>
-            <li>1/2 caixa de creme de leite</li>
-        </ul>
+            <h3 class="subtitulo">Cobertura</h3>
+            <ul class="texto">
+                <li>1 lata de leite condensado Moça</li>
+                <li>1 colher de manteiga</li>
+                <li>3 colheres de Nescau</li>
+                <li>1/2 caixa de creme de leite</li>
+            </ul>
 
-        <h3>Modo de preparo</h3>
+            <h3 class="subtitulo">Modo de preparo</h3>
 
-        <ol>
-            <h4>Massa</h4>
-            <li>Em um liquidificador, adicione a cenoura, os ovos e o óleo, depois misture.</li>
-            <li>Acrescente o açúcar e bata novamente por 5 minutos.</li>
-            <li>Em uma tigela ou na batedeira, adicione a farinha de trigo e depois misture novamente.</li>
-            <li>Acrescente o fermento e misture lentamente com uma colher.</li>
-            <li>Asse em um forno preaquecido a 180° C por aproximadamente 40 minutos.</li>
+            <ol class="texto">
+                <h4 class="tituloLista">Massa</h4>
+                    <li>Em um liquidificador, adicione a cenoura, os ovos e o óleo, depois misture.</li>
+                    <li>Acrescente o açúcar e bata novamente por 5 minutos.</li>
+                    <li>Em uma tigela ou na batedeira, adicione a farinha de trigo e depois misture novamente.</li>
+                    <li>Acrescente o fermento e misture lentamente com uma colher.</li>
+                    <li>Asse em um forno preaquecido a 180° C por aproximadamente 40 minutos.</li>
 
-            <h4>Cobertura</h4>
-            <li>Despeje em uma tigela a manteiga, o chocolate em pó, o açúcar e o leite, depois misture.</li>
-            <li>Leve a mistura ao fogo e continue misturando até obter uma consistência cremosa, depois despeje a calda
-                por cima do bolo.</li>
-        </ol>
+                <h4 class="tituloLista">Cobertura</h4>
+                    <li>Despeje em uma tigela a manteiga, o chocolate em pó, o açúcar e o leite, depois misture.</li>
+                    <li>Leve a mistura ao fogo e continue misturando até obter uma consistência cremosa, depois despeje a calda por cima do bolo.</li>
+            </ol>
+        </div>
 
     </main>
     <section>
-        <h2>Sobre mim</h2>
-        <p class="paragrafo">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci atque necessitatibus ratione reiciendis minus alias non dignissimos? Fuga, cupiditate ipsa voluptate unde ea, similique nisi tempore voluptatum asperiores maxime maiores.
-        </p>
+        <div class="sobreMim">
+            <h2>Sobre mim</h2>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci atque necessitatibus ratione reiciendis minus alias non dignissimos? Fuga, cupiditate ipsa voluptate unde ea, similique nisi tempore voluptatum asperiores maxime maiores.
+            </p>
+        </div>
     </section>
-    <section>
+    <section class="duvidas">
         <h2>Ficou com dúvidas? Veja este vídeo!</h2>
-        <iframe width="719" height="361" src="https://www.youtube.com/embed/__rtbSd_OwI" title="Bolo fofinho de cenoura com calda de chocolate - Imperdível!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe class="video" width="719" height="361" src="https://www.youtube.com/embed/__rtbSd_OwI" title="Bolo fofinho de cenoura com calda de chocolate - Imperdível!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </section>
-    <section>
+    <section class="encontreLoja">
         <h2>Encontre minha loja!</h2>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3560.8029959056184!2d-49.28461882365601!3d-26.81440078910499!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94defb5d49d3eabb%3A0x2c7b795dd475bd98!2sRip%C3%A3o%20Capitais!5e0!3m2!1spt-PT!2sbr!4v1694562446913!5m2!1spt-PT!2sbr" width="719" height="361" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
-    <section>
-        <h2>Fale comigo:</h2>
-        <form>
-            <label>Digite seu e-mail:</label>
+    <section class="faleComigo">
+        <h2 class="subtitulo">Fale comigo:</h2>
+        <form class="texto">
+            <label >Digite seu e-mail:</label>
             <input type="email" placeholder="Digite seu e-mail">
             <label>Digite seu telefone:</label>
             <input type="tel" placeholder="Digite seu telefone">
         </form>
     </section>
-    <footer>
+    <footer class="rodape">
         <p>&copy Todos os direitos reservados.</p>
         <span class="span">2023</span>
     </footer>
